[gd_scene load_steps=9 format=2]

[ext_resource path="res://pages/RenderText.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/ui/icons_alpha/trash_icon.png" type="Texture" id=2]
[ext_resource path="res://res/ui/bts2/hover.tres" type="StyleBox" id=3]
[ext_resource path="res://res/ui/bts2/normal.tres" type="StyleBox" id=4]
[ext_resource path="res://res/ui/bts2/pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://pages/sheets/Sheet_Element_Row_Ref.gd" type="Script" id=6]
[ext_resource path="res://res/ui/icons_alpha/pencil2_icon.png" type="Texture" id=7]
[ext_resource path="res://res/ui/icons_alpha/validation_icon.png" type="Texture" id=8]

[node name="Sheet_Bt_Reference" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="C1" type="HBoxContainer" parent="."]
margin_right = 268.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RenderText" parent="C1" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 224.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="C1"]
visible = false
margin_left = 114.0
margin_right = 224.0
margin_bottom = 960.0
size_flags_horizontal = 3
text = "identité remarquable trigonométrie"
highlight_current_line = true
draw_tabs = true
wrap_enabled = true

[node name="Bt_edit" type="Button" parent="C1"]
modulate = Color( 0.988235, 0.717647, 0, 1 )
margin_left = 228.0
margin_top = 460.0
margin_right = 268.0
margin_bottom = 500.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 6
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="C1/Bt_edit"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Bt_validate" type="Button" parent="C1"]
visible = false
modulate = Color( 0.223529, 0.862745, 0.0196078, 1 )
margin_left = 228.0
margin_top = 460.0
margin_right = 268.0
margin_bottom = 500.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 6
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="C1/Bt_validate"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="C2" type="HBoxContainer" parent="."]
margin_left = 272.0
margin_right = 540.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RenderText2" parent="C2" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 224.0
margin_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="C2"]
visible = false
margin_left = 114.0
margin_right = 224.0
margin_bottom = 960.0
size_flags_horizontal = 3
text = "\\math \\sin^2(x)+\\cos^2(x) = 1"
highlight_current_line = true
draw_tabs = true
wrap_enabled = true

[node name="Bt_delete" type="Button" parent="C2"]
modulate = Color( 0.988235, 0, 0, 1 )
margin_left = 228.0
margin_top = 460.0
margin_right = 268.0
margin_bottom = 500.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 6
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="C2/Bt_delete"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="C1/Bt_edit" to="." method="_on_Bt_edit_pressed"]
[connection signal="pressed" from="C1/Bt_validate" to="." method="_on_Bt_validate_pressed"]
[connection signal="pressed" from="C2/Bt_delete" to="." method="_on_Bt_delete_pressed"]
